fuente/GparametrosParser.java
// Generated from .\fuente\GparametrosParser.g4 by ANTLR 4.7.1

	package fuente;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GparametrosParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, JSON=2, DOT=3, SVG=4, CSV=5, LEN=6, FONTCOLOR=7, FONTNAME=8, FONTSIZE=9, 
		ARROWSIZE=10, ARROWCOLOR=11, PENWIDTH=12, FILLCOLOR=13, STYLE=14, SHAPE=15, 
		EDGE=16, NODE=17, RELATIONSHIP=18, CLASS=19, PROPERTY=20, INHERITANCE=21, 
		INDERECT_USE=22, NUMERO=23, TEXTO=24, CADENA=25;
	public static final int
		RULE_entrada = 0, RULE_tipo_archivo = 1, RULE_textocsv = 2, RULE_textojson = 3, 
		RULE_textosvg = 4, RULE_textodot = 5, RULE_textoparam = 6, RULE_numeroparam = 7, 
		RULE_csv = 8, RULE_json = 9, RULE_svg = 10, RULE_dot = 11, RULE_parametro = 12, 
		RULE_len = 13, RULE_fontcolor = 14, RULE_fontname = 15, RULE_fontsize = 16, 
		RULE_arrowsize = 17, RULE_arrowcolor = 18, RULE_penwidth = 19, RULE_fillcolor = 20, 
		RULE_style = 21, RULE_shape = 22, RULE_len_name = 23, RULE_fontcolor_name = 24, 
		RULE_fontname_name = 25, RULE_fontsize_name = 26, RULE_arrowsize_name = 27, 
		RULE_arrowcolor_name = 28, RULE_penwidth_name = 29, RULE_fillcolor_name = 30, 
		RULE_style_name = 31, RULE_shape_name = 32, RULE_p_edge = 33, RULE_p_node = 34, 
		RULE_p_relationship = 35, RULE_p_class = 36, RULE_p_property = 37, RULE_p_inheritance = 38, 
		RULE_p_inderect_use = 39, RULE_p_len = 40, RULE_p_fontcolor = 41, RULE_p_fontname = 42, 
		RULE_p_fontsize = 43, RULE_p_arrowsize = 44, RULE_p_arrowcolor = 45, RULE_p_penwidth = 46, 
		RULE_p_fillcolor = 47, RULE_p_style = 48, RULE_p_shape = 49;
	public static final String[] ruleNames = {
		"entrada", "tipo_archivo", "textocsv", "textojson", "textosvg", "textodot", 
		"textoparam", "numeroparam", "csv", "json", "svg", "dot", "parametro", 
		"len", "fontcolor", "fontname", "fontsize", "arrowsize", "arrowcolor", 
		"penwidth", "fillcolor", "style", "shape", "len_name", "fontcolor_name", 
		"fontname_name", "fontsize_name", "arrowsize_name", "arrowcolor_name", 
		"penwidth_name", "fillcolor_name", "style_name", "shape_name", "p_edge", 
		"p_node", "p_relationship", "p_class", "p_property", "p_inheritance", 
		"p_inderect_use", "p_len", "p_fontcolor", "p_fontname", "p_fontsize", 
		"p_arrowsize", "p_arrowcolor", "p_penwidth", "p_fillcolor", "p_style", 
		"p_shape"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'-JSON='", "'-DOT='", "'-SVG='", "'-CSV='", "'-len'", "'-fontcolor'", 
		"'-fontname'", "'-fontsize'", "'-arrowsize'", "'-arrowcolor'", "'-penwidth'", 
		"'-fillcolor'", "'-style'", "'-shape'", "'_edge'", "'_node'", "'_relationship='", 
		"'_class='", "'_property='", "'_inheritance='", "'_indirect_use='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "JSON", "DOT", "SVG", "CSV", "LEN", "FONTCOLOR", "FONTNAME", 
		"FONTSIZE", "ARROWSIZE", "ARROWCOLOR", "PENWIDTH", "FILLCOLOR", "STYLE", 
		"SHAPE", "EDGE", "NODE", "RELATIONSHIP", "CLASS", "PROPERTY", "INHERITANCE", 
		"INDERECT_USE", "NUMERO", "TEXTO", "CADENA"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GparametrosParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GparametrosParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EntradaContext extends ParserRuleContext {
		public List<Tipo_archivoContext> tipo_archivo() {
			return getRuleContexts(Tipo_archivoContext.class);
		}
		public Tipo_archivoContext tipo_archivo(int i) {
			return getRuleContext(Tipo_archivoContext.class,i);
		}
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public EntradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entrada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterEntrada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitEntrada(this);
		}
	}

	public final EntradaContext entrada() throws RecognitionException {
		EntradaContext _localctx = new EntradaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entrada);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(102);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case JSON:
				case DOT:
				case SVG:
				case CSV:
					{
					setState(100);
					tipo_archivo();
					}
					break;
				case LEN:
				case FONTCOLOR:
				case FONTNAME:
				case FONTSIZE:
				case ARROWSIZE:
				case ARROWCOLOR:
				case PENWIDTH:
				case FILLCOLOR:
				case STYLE:
				case SHAPE:
					{
					setState(101);
					parametro();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << JSON) | (1L << DOT) | (1L << SVG) | (1L << CSV) | (1L << LEN) | (1L << FONTCOLOR) | (1L << FONTNAME) | (1L << FONTSIZE) | (1L << ARROWSIZE) | (1L << ARROWCOLOR) | (1L << PENWIDTH) | (1L << FILLCOLOR) | (1L << STYLE) | (1L << SHAPE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_archivoContext extends ParserRuleContext {
		public JsonContext json() {
			return getRuleContext(JsonContext.class,0);
		}
		public SvgContext svg() {
			return getRuleContext(SvgContext.class,0);
		}
		public DotContext dot() {
			return getRuleContext(DotContext.class,0);
		}
		public CsvContext csv() {
			return getRuleContext(CsvContext.class,0);
		}
		public Tipo_archivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_archivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterTipo_archivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitTipo_archivo(this);
		}
	}

	public final Tipo_archivoContext tipo_archivo() throws RecognitionException {
		Tipo_archivoContext _localctx = new Tipo_archivoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tipo_archivo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case JSON:
				{
				setState(106);
				json();
				}
				break;
			case SVG:
				{
				setState(107);
				svg();
				}
				break;
			case DOT:
				{
				setState(108);
				dot();
				}
				break;
			case CSV:
				{
				setState(109);
				csv();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextocsvContext extends ParserRuleContext {
		public List<TerminalNode> TEXTO() { return getTokens(GparametrosParser.TEXTO); }
		public TerminalNode TEXTO(int i) {
			return getToken(GparametrosParser.TEXTO, i);
		}
		public List<TerminalNode> CADENA() { return getTokens(GparametrosParser.CADENA); }
		public TerminalNode CADENA(int i) {
			return getToken(GparametrosParser.CADENA, i);
		}
		public TextocsvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textocsv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterTextocsv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitTextocsv(this);
		}
	}

	public final TextocsvContext textocsv() throws RecognitionException {
		TextocsvContext _localctx = new TextocsvContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_textocsv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				_la = _input.LA(1);
				if ( !(_la==TEXTO || _la==CADENA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXTO || _la==CADENA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextojsonContext extends ParserRuleContext {
		public List<TerminalNode> TEXTO() { return getTokens(GparametrosParser.TEXTO); }
		public TerminalNode TEXTO(int i) {
			return getToken(GparametrosParser.TEXTO, i);
		}
		public List<TerminalNode> CADENA() { return getTokens(GparametrosParser.CADENA); }
		public TerminalNode CADENA(int i) {
			return getToken(GparametrosParser.CADENA, i);
		}
		public TextojsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textojson; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterTextojson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitTextojson(this);
		}
	}

	public final TextojsonContext textojson() throws RecognitionException {
		TextojsonContext _localctx = new TextojsonContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_textojson);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(117);
				_la = _input.LA(1);
				if ( !(_la==TEXTO || _la==CADENA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXTO || _la==CADENA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextosvgContext extends ParserRuleContext {
		public List<TerminalNode> TEXTO() { return getTokens(GparametrosParser.TEXTO); }
		public TerminalNode TEXTO(int i) {
			return getToken(GparametrosParser.TEXTO, i);
		}
		public List<TerminalNode> CADENA() { return getTokens(GparametrosParser.CADENA); }
		public TerminalNode CADENA(int i) {
			return getToken(GparametrosParser.CADENA, i);
		}
		public TextosvgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textosvg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterTextosvg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitTextosvg(this);
		}
	}

	public final TextosvgContext textosvg() throws RecognitionException {
		TextosvgContext _localctx = new TextosvgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_textosvg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				_la = _input.LA(1);
				if ( !(_la==TEXTO || _la==CADENA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(125); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXTO || _la==CADENA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextodotContext extends ParserRuleContext {
		public List<TerminalNode> TEXTO() { return getTokens(GparametrosParser.TEXTO); }
		public TerminalNode TEXTO(int i) {
			return getToken(GparametrosParser.TEXTO, i);
		}
		public List<TerminalNode> CADENA() { return getTokens(GparametrosParser.CADENA); }
		public TerminalNode CADENA(int i) {
			return getToken(GparametrosParser.CADENA, i);
		}
		public TextodotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textodot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterTextodot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitTextodot(this);
		}
	}

	public final TextodotContext textodot() throws RecognitionException {
		TextodotContext _localctx = new TextodotContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_textodot);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(127);
				_la = _input.LA(1);
				if ( !(_la==TEXTO || _la==CADENA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXTO || _la==CADENA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextoparamContext extends ParserRuleContext {
		public List<TerminalNode> TEXTO() { return getTokens(GparametrosParser.TEXTO); }
		public TerminalNode TEXTO(int i) {
			return getToken(GparametrosParser.TEXTO, i);
		}
		public List<TerminalNode> CADENA() { return getTokens(GparametrosParser.CADENA); }
		public TerminalNode CADENA(int i) {
			return getToken(GparametrosParser.CADENA, i);
		}
		public TextoparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textoparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterTextoparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitTextoparam(this);
		}
	}

	public final TextoparamContext textoparam() throws RecognitionException {
		TextoparamContext _localctx = new TextoparamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_textoparam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				_la = _input.LA(1);
				if ( !(_la==TEXTO || _la==CADENA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TEXTO || _la==CADENA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumeroparamContext extends ParserRuleContext {
		public TerminalNode NUMERO() { return getToken(GparametrosParser.NUMERO, 0); }
		public NumeroparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeroparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterNumeroparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitNumeroparam(this);
		}
	}

	public final NumeroparamContext numeroparam() throws RecognitionException {
		NumeroparamContext _localctx = new NumeroparamContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numeroparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(NUMERO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CsvContext extends ParserRuleContext {
		public TerminalNode CSV() { return getToken(GparametrosParser.CSV, 0); }
		public TextocsvContext textocsv() {
			return getRuleContext(TextocsvContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GparametrosParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GparametrosParser.WS, i);
		}
		public CsvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_csv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterCsv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitCsv(this);
		}
	}

	public final CsvContext csv() throws RecognitionException {
		CsvContext _localctx = new CsvContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_csv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(CSV);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(140);
				match(WS);
				}
			}

			setState(143);
			textocsv();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(144);
				match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JsonContext extends ParserRuleContext {
		public TerminalNode JSON() { return getToken(GparametrosParser.JSON, 0); }
		public TextojsonContext textojson() {
			return getRuleContext(TextojsonContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GparametrosParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GparametrosParser.WS, i);
		}
		public JsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_json; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterJson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitJson(this);
		}
	}

	public final JsonContext json() throws RecognitionException {
		JsonContext _localctx = new JsonContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_json);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(JSON);
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(148);
				match(WS);
				}
			}

			setState(151);
			textojson();
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(152);
				match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SvgContext extends ParserRuleContext {
		public TerminalNode SVG() { return getToken(GparametrosParser.SVG, 0); }
		public TextosvgContext textosvg() {
			return getRuleContext(TextosvgContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GparametrosParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GparametrosParser.WS, i);
		}
		public SvgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_svg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterSvg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitSvg(this);
		}
	}

	public final SvgContext svg() throws RecognitionException {
		SvgContext _localctx = new SvgContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_svg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(SVG);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(156);
				match(WS);
				}
			}

			setState(159);
			textosvg();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(160);
				match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DotContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(GparametrosParser.DOT, 0); }
		public TextodotContext textodot() {
			return getRuleContext(TextodotContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(GparametrosParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GparametrosParser.WS, i);
		}
		public DotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterDot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitDot(this);
		}
	}

	public final DotContext dot() throws RecognitionException {
		DotContext _localctx = new DotContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dot);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(DOT);
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(164);
				match(WS);
				}
			}

			setState(167);
			textodot();
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(168);
				match(WS);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametroContext extends ParserRuleContext {
		public LenContext len() {
			return getRuleContext(LenContext.class,0);
		}
		public FontcolorContext fontcolor() {
			return getRuleContext(FontcolorContext.class,0);
		}
		public FontnameContext fontname() {
			return getRuleContext(FontnameContext.class,0);
		}
		public FontsizeContext fontsize() {
			return getRuleContext(FontsizeContext.class,0);
		}
		public ArrowsizeContext arrowsize() {
			return getRuleContext(ArrowsizeContext.class,0);
		}
		public ArrowcolorContext arrowcolor() {
			return getRuleContext(ArrowcolorContext.class,0);
		}
		public PenwidthContext penwidth() {
			return getRuleContext(PenwidthContext.class,0);
		}
		public FillcolorContext fillcolor() {
			return getRuleContext(FillcolorContext.class,0);
		}
		public StyleContext style() {
			return getRuleContext(StyleContext.class,0);
		}
		public ShapeContext shape() {
			return getRuleContext(ShapeContext.class,0);
		}
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GparametrosParserListener ) ((GparametrosParserListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_parametro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEN:
				{
				setState(171);
				len();
				}
				break;
			case FONTCOLOR:
				{
				setState(172);
				fontcolor();
				}
				break;
			case FONTNAME:
				{
				setState(173);
				fontname();
				}
				break;
			case FONTSIZE:
				{
				setState(174);
				fontsize();
				}
				break;
			case ARROWSIZE:
				{
				setState(175);
				arrowsize();
				}
				break;
			case ARROWCOLOR:
				{
				setState(176);
				arrowcolor();
				}
				break;
			case PENWIDTH:
				{
				setState(177);
				penwidth();
				}
				break;
			case FILLCOLOR:
				{
				setState(178);
				fillcolor();
				}
				break;
			case STYLE:
				{
				setState(179);
				style();
				}
				break;
			case SHAPE:
				{
				setState(180);
				shape();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
